some change in swagger config
