# internal/handlers/user_handlers.go
@@ -15,6 +15,7 @@ import (
 	"github.com/khalil-farashiani/url-shortener/internal/utils"
 	"github.com/khalil-farashiani/url-shortener/logger"
 	"github.com/labstack/echo/v4"
+	_ "github.com/swaggo/echo-swagger/example/docs"
 )
 
 const (
@@ -53,6 +54,14 @@ func getUserId(userIdParam string) (int64, *utils.RestErr) {
 	return userId, nil
 }
 
+// url-shortener godoc
+// @Summary Show the status of server.
+// @Description get the status of server.
+// @Tags root
+// @Accept */*
+// @Produce json
+// @Success 200 {object} map[interface{}]interface{}
+// @Router /users/ [POST]
 func CreateUser(c echo.Context) error {
 	// create a user struct
 	var user = &user.User{}
@@ -112,14 +121,18 @@ func CreateUser(c echo.Context) error {
 	return c.JSON(http.StatusCreated, user.Marshall())
 }
 
-// HealthCheck godoc
-// @Summary Show the status of server.
-// @Description get the status of server.
-// @Tags root
-// @Accept */*
-// @Produce json
-// @Success 200 {object} map[interface{}]interface{}
-// @Router /users/{id} [get]
+// GetUser godoc
+// @Summary      Show an user
+// @Description  get string by ID
+// @Tags         users
+// @Accept       json
+// @Produce      json
+// @Param        id   path      int  true  "User ID"
+// @Success      200  {object}  map[string]interface{}
+// @Failure      400  {object}  interface{}
+// @Failure      404  {object}  interface{}
+// @Failure      500  {object}  interface{}
+// @Router       /users/{id} [get]
 func GetUser(c echo.Context) error {
 	idParam := c.Param("user_id")
 	userId, getErr := getUserId(idParam)
